# teleco-customer-churn-aws

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: README.md
api/environment/: Dockerfile.lambda  Dockerfile.local
api/src/: config.py  main.py
api/src/api_components/predict/: models.py  predict.py
app/: README.md  app.py  auth_config.yaml  components.py  config.py  predict.py
app/.streamlit/: config.toml  secrets.toml.example
app/environment/: Dockerfile.ecs  Dockerfile.local
data/: teleco-customer-churn-cleaned.csv
data/processed/: feature_names.pkl  model_params.json  scaler.pkl  test.csv  train_original.csv  train_smote.csv
infra/: README.md
infra/terraform/: README.md  backend.tf  main.tf  providers.tf  terraform.tfvars  tfplan  variables.tf
infra/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecs-service/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecs-task-definition/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/sagemaker-endpoint/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/security-group/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
notebooks/: 01_eda_preprocessing.ipynb  02_data_preprocessing.ipynb  03_model_training_and_evaluation.ipynb
scripts/: rf_train.py  svm_train.py
src/app/: app.py
src/app/.streamlit/: config.toml
src/app/environment/: .dockerignore  Dockerfile  Dockerfile.local  docker-compose.yml  requirements.txt
